# dealfindr

./: .gitignore  LICENSE  README.md  dealfindr.py  pyproject.toml  requirements.txt
tests/: test_dealfindr.py
