[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "dealfindr"
version = "1.1.0"
description = "Find the best prices across multiple shopping platforms from your terminal."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "amarkulis" },
]
keywords = ["price-comparison", "shopping", "deals", "scraper", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "rich>=13.7.0",
    "lxml>=5.1.0",
    "rapidfuzz>=3.0.0",
    "playwright>=1.40.0",
]

[project.urls]
Homepage = "https://github.com/amarkulis/dealfindr"
Repository = "https://github.com/amarkulis/dealfindr"
Issues = "https://github.com/amarkulis/dealfindr/issues"

[project.scripts]
dealfindr = "dealfindr:main"

[tool.setuptools]
py-modules = ["dealfindr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
